{
    "name": "InputMap",
    "maps": [
        {
            "name": "Rat_Player",
            "id": "0bf02725-f30a-4329-a5e7-b996d39b5c52",
            "actions": [
                {
                    "name": "Move2D",
                    "type": "Value",
                    "id": "57d0f4db-09d5-4288-8221-d7547d41f576",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4ca317c1-eba7-46fe-a5a5-5edab5edc9c2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2D",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d6536208-036d-4e03-9d1d-420de27aca20",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7f191abf-ce4a-4300-99cf-b89f4d1cca8c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cba800b7-0053-4dc2-8319-4ae63da5caa9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0c8da426-3838-4609-ad40-225b39e74cd7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2D",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Spider_Player",
            "id": "2280df48-9f9a-43cb-905c-aee507f801e6",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "1fb206b0-cbfe-40d5-ac70-b0b6b9fb9a46",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13135c63-6f52-470e-8dab-8fb875f96044",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New Control Scheme",
            "bindingGroup": "New Control Scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}